Closed Bug 324079 Opened 20 years ago Closed 20 years ago

Insert/Delete doesn't work with non-default models

Categories

(Core Graveyard :: XForms, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronr, Assigned: aaronr)

References

Details

(Keywords: fixed1.8.0.4, fixed1.8.1)

Attachments

(2 files)

If you try to use insert and delete binding to instance data that doesn't live in the first model in the document, then it doesn't work. Problem is that we are calling EvaluateNodeBinding with a flag of 0 instead of nsXFormsUtils::ELEMENT_WITH_MODEL_ATTR. Testcase and patch coming.
Attached file testcase
Attached patch proposed fixSplinter Review
Attachment #209040 - Flags: review?(smaug)
Attachment #209040 - Flags: review?(doronr)
Attachment #209040 - Flags: review?(doronr) → review+
Attachment #209040 - Flags: review?(smaug) → review+
checked in
Status: NEW → ASSIGNED
Whiteboard: xf-to-branch
Blocks: 326556
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Blocks: 332853
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: