XForms bug 324079 - insert/delete doesn't work with non-default model.  Patch by aaronr, r=smaug,me